# fast_auto_dial_new

./: .env  .gitignore  README.md  docker-compose.yml  search_container.sh
backend/: .gitignore  Dockerfile  home.env  office.env  pyproject.toml  requirements.txt
backend/app/: initial_data.py  main.py
backend/app/alembic/versions/: 5777c62cb84c_add_a_column.py
backend/app/api/api_v1/routers/: auth.py  users.py
backend/app/autodial/: autodial_apps.py  autodial_fork.py  fastapi_autodial.py  synthesize_files.py
backend/app/config/: __init__.py  config.py  config_logger.py  custom_logging.py  database.py  logger.py  logging_config.json
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/templates/: _data.html  autodials.html  translates.html
