[tool.poetry]
name = "fast_auto_dial"
version = "0.1.0"
description = "Пакеты для организации автодозвона с Астериском"
authors = ["Andrei Murashev <muraigtor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.3 || ^3.8"
fastapi = "^0.65.2"
Jinja2 = "^2.11.3"
loguru = "^0.5.3"
celery = "^5.2.2"
uvicorn = "^0.17.0"
broadcaster = "^0.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"
pytest = "^6.1.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

